@@ -34,6 +34,8 @@
 #include "scip/scip_sol.h"
 #include "scip/scip_tree.h"
 #include "scip/struct_misc.h"
+#include "scip/struct_scip.h"
+#include "scip/set.h"
 
 #define ROWPREP_SCALEUP_VIOLNONZERO    (10.0*SCIPepsilon(scip))    /**< minimal violation for considering up-scaling of rowprep (we want to avoid upscaling very small violations) */
 #define ROWPREP_SCALEUP_MINVIOLFACTOR  2.0                         /**< scale up will target a violation of ~MINVIOLFACTOR*minviol, where minviol is given by caller */
@@ -1150,7 +1152,6 @@ SCIP_RETCODE SCIPcleanupRowprep(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_ROWPREP*         rowprep,            /**< rowprep to be cleaned */
    SCIP_SOL*             sol,                /**< solution that we try to cut off, or NULL for LP solution */
-   SCIP_Real             maxcoefrange,       /**< maximal allowed coefficients range */
    SCIP_Real             minviol,            /**< minimal absolute violation the row should achieve (w.r.t. sol) */
    SCIP_Real*            viol,               /**< buffer to store absolute violation of cleaned up cut in sol, or NULL if not of interest */
    SCIP_Bool*            success             /**< buffer to store whether cut cleanup was successful, or NULL if not of interest */
@@ -1158,12 +1159,13 @@ SCIP_RETCODE SCIPcleanupRowprep(
 {
    SCIP_Real myviol;
    SCIP_Bool violreliable = TRUE;
+   SCIP_Real maxcoefrange;
 #ifdef SCIP_DEBUG
    SCIP_Real mincoef = 1.0;
    SCIP_Real maxcoef = 1.0;
 #endif
 
-   assert(maxcoefrange > 1.0);   /* not much interesting otherwise */
+   maxcoefrange = SCIPsetGetSepaMaxCoefRatioRowprep(scip->set);
 
    if( rowprep->recordmodifications )
    {
@@ -1305,16 +1307,17 @@ SCIP_RETCODE SCIPcleanupRowprep(
 
 /** Cleans up and attempts to improve rowprep without regard for violation
  *
- * Drops small or large coefficients if coefrange is too large, if this can be done by relaxing the row.
+ * Drops small or large coefficients if their ratio is beyond separating/maxcoefratiofacrowprep / numerics/feastol,
+ * if this can be done by relaxing the row.
  * Scales coefficients and side to have maximal coefficient in `[1/maxcoefbound,maxcoefbound]`.
  * Rounds coefficients close to integral values to integrals, if this can be done by relaxing the row.
  * Rounds side within epsilon of 0 to 0.0 or +/-1.1*epsilon, whichever relaxes the row least.
  *
  * After return, the terms in the rowprep will be sorted by absolute value of coefficient, in decreasing order.
- * Thus, the coefrange can be obtained via `REALABS(rowprep->coefs[0]) / REALABS(rowprep->coefs[rowprep->nvars-1])` (if nvars>0).
+ * Thus, the coefratio can be obtained via `REALABS(rowprep->coefs[0]) / REALABS(rowprep->coefs[rowprep->nvars-1])` (if nvars>0).
  *
  * `success` is set to TRUE if and only if the rowprep satisfies the following:
- * - the coefrange is below `maxcoefrange`
+ * - the coefratio is below separating/maxcoefratiofacrowprep / numerics/feastol
  * - the absolute value of coefficients are below SCIPinfinity()
  * - the absolute value of the side is below SCIPinfinity()
  *
@@ -1324,18 +1327,19 @@ SCIP_RETCODE SCIPcleanupRowprep2(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_ROWPREP*         rowprep,            /**< rowprep to be cleaned */
    SCIP_SOL*             sol,                /**< solution that we try to cut off, or NULL for LP solution */
-   SCIP_Real             maxcoefrange,       /**< maximal allowed coefficients range */
    SCIP_Real             maxcoefbound,       /**< bound on absolute value of largest coefficient */
    SCIP_Bool*            success             /**< buffer to store whether cut cleanup was successful, or NULL if not of interest */
    )
 {
+   SCIP_Real maxcoefrange;
 #ifdef SCIP_DEBUG
    SCIP_Real mincoef = 1.0;
    SCIP_Real maxcoef = 1.0;
 #endif
 
-   assert(maxcoefrange > 1.0);   /* not much interesting otherwise */
    assert(maxcoefbound >= 1.0);
+
+   maxcoefrange = SCIPsetGetSepaMaxCoefRatioRowprep(scip->set);
 
    if( rowprep->recordmodifications )
    {
